Layout nits for the signin email confirmation dialog.

This CL does the following layout changes for the sign-in email confirmation
dialog:
1. Expands the dialog width from 448px > 512px to accommodate text-length
2. Change the height og the title bar to have a 16px padding at the top and
at the bottom.
3. Change title line-height to 22px
4. Chaneg the title font color to: #333333
5. Change radio_off color: #757575 (this is google-grey-600)

BUG=667665
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2625663003
Cr-Commit-Position: refs/heads/master@{#443665}

Former-commit-id: a0b7a374a98a7aa4902e922ad7b7279ade10c3da